@@ -4,24 +4,35 @@ import com.dev.ForoEscolar.dtos.asistencia.AsistenciaDTO;
 import com.dev.ForoEscolar.exceptions.ApplicationException;
 import com.dev.ForoEscolar.mapper.asistencia.AsistenciaMapper;
 import com.dev.ForoEscolar.model.Asistencia;
+import com.dev.ForoEscolar.model.Estudiante;
+import com.dev.ForoEscolar.model.Grado;
 import com.dev.ForoEscolar.repository.AsistenciaRepository;
+import com.dev.ForoEscolar.repository.EstudianteRepository;
+import com.dev.ForoEscolar.repository.GradoRepository;
 import com.dev.ForoEscolar.services.AsistenciaService;
 import jakarta.transaction.Transactional;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
+
 @Service
 public class AsistenciaServiceImpl implements AsistenciaService {
 
     private final AsistenciaRepository asistenciaRepository;
-
+    private final GradoRepository gradoRepository;
+    private EstudianteRepository estudianteRepository;
     private final AsistenciaMapper asistenciaMapper;
 
     @Autowired
-    public AsistenciaServiceImpl(AsistenciaRepository asistenciaRepository, AsistenciaMapper asistenciaMapper) {
+    public AsistenciaServiceImpl(AsistenciaRepository asistenciaRepository, AsistenciaMapper asistenciaMapper,
+                                 GradoRepository gradoRepository, EstudianteRepository estudianteRepository) {
         this.asistenciaRepository = asistenciaRepository;
         this.asistenciaMapper = asistenciaMapper;
+        this.gradoRepository= gradoRepository;
+        this.estudianteRepository=estudianteRepository;
     }
 
 
@@ -33,31 +44,24 @@ public class AsistenciaServiceImpl implements AsistenciaService {
     @Override
     @Transactional
     public AsistenciaDTO save(AsistenciaDTO requestDTO) {
-        double anioEscolar= 198.0;
         Asistencia newAsistencia = asistenciaMapper.toEntity(requestDTO);
-        newAsistencia.setDiasAnioEscolar(anioEscolar);
+
+        newAsistencia.setContadorTotal(asistenciaRepository.countByContadorClases(true));
+        newAsistencia.setAsistenciaAlumno(asistenciaRepository.countByEstudianteIdAndAsistioTrue(requestDTO.getEstudiante()));
+
         asistenciaRepository.save(newAsistencia);
 
-        //double porcentajeAsistencia= calcularPorcentajeAsistencia(anioEscolar);
-        double porcentajeAsistencia= calcularPorcentajeAsistenciaTrimestral(anioEscolar);
-
+        double porcentajeAsistencia= porcentajeAsistencia(newAsistencia.getEstudiante().getId());
         AsistenciaDTO responseDTO = asistenciaMapper.toResponseDto(newAsistencia);
-        responseDTO = new AsistenciaDTO(
-                responseDTO.id(),
-                responseDTO.asistio(),
-                //anioEscolar,
-                responseDTO.fecha(),
-                responseDTO.observaciones(),
-                porcentajeAsistencia,
-                responseDTO.profesor(),
-                responseDTO.estudiante()
-        );
+
+        responseDTO.setPorcentajeAsistencia(porcentajeAsistencia);
         return responseDTO;
     }
 
     @Override
     public Optional<AsistenciaDTO> findById(Long id) {
         Optional<Asistencia> asistenciaDTO = asistenciaRepository.findById(id);
+
         if(asistenciaDTO.isPresent()){
             return asistenciaDTO.map(asistenciaMapper::toResponseDto);
         }else{
@@ -69,7 +73,7 @@ public class AsistenciaServiceImpl implements AsistenciaService {
     public Iterable<AsistenciaDTO> findAll() {
         return asistenciaRepository.findAll().stream()
                 .map(asistenciaMapper::toResponseDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -77,9 +81,53 @@ public class AsistenciaServiceImpl implements AsistenciaService {
 
     }
 
-    private double calcularPorcentajeAsistenciaTrimestral(double diasAnio) {
-        double var= diasAnio/3;
-        long totalAsistencias = asistenciaRepository.countByAsistio(true);
-        return  (totalAsistencias*100) / var;
+    @Override
+    public Iterable<AsistenciaDTO> getAsistenciasByEstudianteID(Long estudianteId){
+        List<Asistencia> asistencias= asistenciaRepository.findByEstudianteId(estudianteId);
+        return asistencias.stream().map(asistenciaMapper::toResponseDto)
+                .collect(Collectors.toList());
     }
+
+//    @Override
+//    public List<AsistenciaDTO> getAsistenciasByGradoAndEstudiante(Long estudianteId, Long gradoId){
+//
+//        List<Asistencia> asistencias= asistenciaRepository.findByEstudianteIdAndGradoId(estudianteId,gradoId);
+//        return asistencias.stream().map(asistenciaMapper::toResponseDto)
+//                .collect(Collectors.toList());
+//    }
+
+        @Override
+    public Iterable<AsistenciaDTO> getAsistenciasByGradoAndEstudiante(Long tutorId, Long gradoId){
+
+            Optional<Grado>grado= gradoRepository.findById(gradoId);
+            if (grado.isEmpty()){
+                throw new ApplicationException("Grado no encontrado");
+            }
+            List<Estudiante> estudiantes= estudianteRepository.findByTutorId(tutorId);
+            return estudiantes.stream().
+                    flatMap(estudiante -> asistenciaRepository.findByEstudianteIdAndGradoId(estudiante.getId(),gradoId).stream())
+                    .map(asistenciaMapper::toResponseDto)
+                    .collect(Collectors.toList());
+    }
+
+    @Override
+    public Iterable<AsistenciaDTO> getAsistenciasByGrado(Long gradoId){
+
+        Optional<Grado>grado= gradoRepository.findById(gradoId);
+        if(grado.isPresent()){
+            List<Asistencia> asistencias= asistenciaRepository.findByGradoId(gradoId);
+            return asistencias.stream()
+                    .map(asistenciaMapper::toResponseDto).collect(Collectors.toList());
+        }
+   throw new ApplicationException("Grado no encontrado");
+    }
+
+
+    private double porcentajeAsistencia(long idEstudiante) {
+
+        long diasAsistidos= asistenciaRepository.countByEstudianteIdAndAsistioTrue(idEstudiante);
+        long diasDeClases= asistenciaRepository.countByContadorClases(true);
+        return (diasAsistidos*100) / diasDeClases;
+    }
+
 }
